feat(fable-agents): rewrite all agents to operational standard; guard test suite
fable-agents 1.1.0: 19 laundry-list agents rewritten with concrete commands,
decision tables, gotchas, and distinct router descriptions. fable-guard 0.4.0:
27-test suite in CI, NotebookEdit coverage, stale_map quoted-path/rename fixes.
Descriptions capped at 400 chars pack-wide (workflows 1.0.1, marketing 0.2.1);
validate.py enforces the cap.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>